--- a/app/src/main/res/layouts/drawer_type/layout/content_drawer_type.xml
+++ b/app/src/main/res/layouts/drawer_type/layout/content_drawer_type.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".DrawerTypeActivity"
+    tools:context=".ui.view.DrawerTypeActivity"
     tools:showIn="@layout/app_bar_drawer_type">
 
 </android.support.constraint.ConstraintLayout>
