--- a/app/src/main/res/layouts/main/layout/activity_main.xml
+++ b/app/src/main/res/layouts/main/layout/activity_main.xml
@@ -23,6 +23,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="go to bottom" />
+
+        <Button
+            android:id="@+id/button_permission"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="get permission" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
